...

- (instancetype)initViewController {
    if (self = [super initViewController]) {
        UIImage *tabImage = [UIImage imageNamed:@"icon_mixed_normal"];
        UIImage *tabSelectImage = [UIImage imageNamed:@"icon_mixed_height"];
        tabSelectImage = [tabSelectImage imageWithRenderingMode:UIImageRenderingModeAlwaysOriginal];
        self.tabBarItem = [[UITabBarItem alloc] initWithTitle:@"组合"
                                                        image:tabImage
                                                selectedImage:tabSelectImage];
        
        // 初始化数据模型
        self.profundLoanModel = [[HLCLoanModel alloc] init];
        self.commerLoanModel = [[HLCLoanModel alloc] init];
...
